tests/typing/fail/attr_eigen_fail2.rb

class A
  class << self
    attr :ro
    attr(:rw,true)
  end
  @ro = 3
  @rw = "blah"
end

A.rw - 3
